WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299650
An element with a background image does not always count as contentful to paint-timing
https://bugs.webkit.org/show_bug.cgi?id=299650
Summary
An element with a background image does not always count as contentful to pai...
Simon Fraser (smfr)
Reported
2025-09-26 20:06:59 PDT
`RenderBox::imageChanged()` has an early return for `!isComposited()` before it calls `incrementVisuallyNonEmptyPixelCountIfNeeded()`, which is wrong.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-26 20:07:16 PDT
<
rdar://problem/161456094
>
Simon Fraser (smfr)
Comment 2
2025-09-26 20:11:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51428
EWS
Comment 3
2025-09-28 12:01:35 PDT
Committed
300667@main
(55423322fb83): <
https://commits.webkit.org/300667@main
> Reviewed commits have been landed. Closing PR #51428 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug